syntax = "proto3";

package pb;

option go_package  = "./pb";

message OperationDetails {
    int32 a = 1;
    int32 b = 2;
}

message Answer {
    int32 result = 1;
}
